<resources>
    <string name="app_name">Interaktionsprinzipien</string>
    <string name="four_connect_arrow">Pfeil zum Drücken</string>
    <string name="four_connect_box">Box für Coins</string>
    <string name="four_connect_coin">Coin</string>
    <string name="four_connect_time_placeholder">10</string>
    <string name="four_connect_warning_to_decide">Entscheide Dich!</string>
    <string name="createCoin">Erstellen Sie eine Münze!</string>
    <string name="changeColor">Farbe ändern</string>
    <string name="editorBtnColorDesc">Farbe</string>
    <string name="editorBtnDrawDesc">Zeichnen</string>
    <string name="editorBtnCornerDesc">Eckenanzahl</string>
    <string name="nextBtn">weiter</string>
    <string name="resetBtn">Zurücksetzen</string>
    <string name="nextLevelBtn">Level beenden</string>
    <string name="four_connect_btn_options">Optionen</string>
    <string name="four_connect_btn_help">Hilfe</string>
    <string name="log_in_activity">Log In Activity</string>
    <string name="birthdate">Geburtsdatum:</string>
    <string name="birthdayStartDay">01</string>
    <string name="birthdayStartYear">1970</string>
    <string name="birthdayStartMonth">01</string>
    <string name="plusSign">+</string>
    <string name="minusSign">-</string>
    <string name="yearOfBirth">Geburtsjahr</string>
    <string name="monthOfBirth">Geburtsmonat</string>
    <string name="day_of_birth">Geburtstag</string>
    <string name="userName">Benutzername:</string>
    <string name="userNameHint">Hans</string>
    <string name="firstLastName">Vor- und Nachname</string>
    <string name="exampleMaxMustermann">Beispiel: Max Musternann</string>
    <string name="eMail">E-Mail:</string>
    <string name="at">\@</string>
    <string name="emailFirstPartHint">mustermann</string>
    <string name="emailDomainHint">gmail</string>
    <string name="emailTopLevelDomainHint">de</string>
    <string name="emailPoint">.</string>
    <string name="textFirstCheckBox">Bitte anhaken, wenn sie fortfahren möchten. Damit bestätigen Sie, dass Sie fortfahren möchten und das ist sehr wichtig, da ansonsten nicht fortgefahren werden kann. ​</string>
    <string name="textSecondCheckBox">Ich, Max Mustermann, stimme den AGBs, den Datenschutzbedingungen und der Überprüfung meiner Intelligenz um keinen Preis zu. ​</string>
    <string name="sose2022">SoSe2022</string>
    <string name="nextStep">voran</string>
    <string name="saveButton">Speichern</string>
    <string name="CancelButton">Abbrechen</string>
    <string name="copyrightHsd">Copyright HSD</string>
    <string name="four_connect_btn_next">Zu den Fragen</string>
    <string name="four_connect_btn_again">Noch ein mal</string>
    <string name="stresslevel">Frust-o-meter</string>
    <string name="result">Auswertung</string>
    <string name="updateBtn">aktualisieren</string>
    <string name="result100">Sie sind ein ungeduldiger Technologiefeind und ein Kontrollfreak. Halten Sie sich von billigen Apps wie SkyGo oder Studentensoftware fern. Wie wäre es für Software auch mal etwas zu bezahlen?</string>
    <string name="result75">Sie sollten an ihrem Anger-Management arbeiten. Gehen Sie doch mal in die Sauna oder schließen sich im Keller ein.</string>
    <string name="result50">Ein gesundes Maß an Skepsis und ein gewisser Anspruch, das gefällt mir, Sie sind engagiert.</string>
    <string name="result25">Haaaalloooo. Sind Sie wach? Kann jemand mal die 112 anrufen? Sie sind offensichtlich innerlich längst gestorben und nichts kann sie aus der ewigen Ruhe bringen.</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</string>
    <string name="lorem_ipsum_short">Lorem ipsum dolor sit amet, consetetur sadipscing elitr?</string>
    <string name="answerPlaceholder">Antwort</string>
    <string name="answerQuiz01"><![CDATA[<html>
                       <b>Aufgabenangemessenheit:</b> Ein einziges Steuerelement zum Inkrementieren des Datums ist für eine komfortable Nutzung unzureichend. <br/><br/>
                       <b>Steuerbarkeit:</b> Da nur ein Button zur Steuerung zur Verfügung steht, ist die Steuerbarkeit nicht ausreichend implementiert.<br/><br/>
                       <b>Robustheit gegen Benutzerfehler:</b> Da es keine Möglichkeit gibt, das Datum wieder zu dekrementieren, ist ein Benutzerfehler fatal.
                       </html>]]></string>
    <string name="answerQuiz02"><![CDATA[<html>
                       <b>Steuerbarkeit:</b>Man bekommt ein Eingabefeld angezeigt, jedoch verhält sich dieses nicht dementsprechend. Stattdessen wird beim Klick auf den Butten ein zufälliger Benutzername gewählt.<br/><br/>
                       <b>Benutzerbindung:</b> Da der Benutzer nur sehr eingeschränkte Möglichkeiten hat, seinen Benutzernamen individuell zu wählen, spricht dieses Interaktionselement gegen das Prinzip der Benutzerbindung.
                       </html>]]></string>
    <string name="answerQuiz03"><![CDATA[<html>
                       <b>Selbstbeschreibend:</b> Die Fehlermeldung gibt nur darüber Auskunft, dass etwas bei den Eingaben des Nutzers nicht stimmt. Um was es sich dabei genau handelt, ist nicht näher definiert.
                        Damit ist diese Meldung nicht selbstbeschreibend. Um dies zu verbessern, könnte man noch genauer beschreiben, was mit den Eingaben nicht richtig ist und im Idealfall korrekte bzw.
                        nicht korrekte Benutzereingaben entsprechend hervorheben, damit der Nutzer schnell sieht, was er noch beheben muss.
                       </html>]]></string>
    <string name="answerQuizOptions01"><![CDATA[<html>
                       <b>Erlernbarkeit:</b> Die beiden Buttons sind nicht gleich beschrieben, obwohl deren Funktion die Gleiche ist.<br/><br/>
                       <b>Erwartungskonformität:</b> Bei der Lautstärke ist der Button aktiviert und die Funktion deaktiviert.
                        Durch die gewohnte Leserichtung und farblicher Darstellung im "aktivierten" Zustand würde man fälschlicherweise erwarten, dass die Funktion ebenfalls aktiviert ist.<br/><br/>
                       </html>]]></string>
    <string name="answerQuizOptions02"><![CDATA[<html>
                       <b>Robustheit gegen Benutzungsfehler:</b> Da die Option erst weit unten steht, betätigt der Nutzer eventuell falsche Eingaben, die erst nach Aktivierung des Buttons und erneutem Aufrufen der Infobuttons deutlich werden. <br/><br/>
                       <b>Erwartungskonformität:</b> Drückt man auf einen Infobutton würde man eine Rückmeldung erwarten, Diese aber vergeblich suchen.
                       So erscheint der Eindruck, dass etwas nicht stimmt, solange man die entsprechende Option nicht aktiviert hat.<br/><br/>
                       </html>]]></string>
    <string name="answerQuizOptions03"><![CDATA[<html>
                       Hier wurde kein Kriterium verletzt. <br/><br/>
                       </html>]]></string>
    <string name="answerQuizGame01"><![CDATA[<html>
                       <b>Aufgabenangemessenheit:</b> Die Uhr läuft runter, hat aber keinen Einfluss auf das Spiel, außer Stress beim Spielenden zu erzeugen. <br/><br/>
                       <b>Erwartungskonformität:</b> Die Uhr läuft ins Minus und bricht dann irgendwann ab. Das entspricht nicht den Vorerfahrungen der Spielenden.<br/><br/>
                       </html>]]></string>
    <string name="answerQuizGame02"><![CDATA[<html>
                       <b>Erlernbarkeit:</b> Es wird kein Hinweis gegeben, wie man als Spielender einen Coin setzen kann. <br/><br/>
                       <b>Erwartungskonformität:</b>Das Schütteln des Smartphones als Interaktion ist unkoventionell und entspricht nicht den Erwartungen des Spielenden.<br/><br/>
                       </html>]]></string>
    <string name="answerQuizGame03"><![CDATA[<html>
                       <b>Aufgabenangemessenheit:</b> Toasts dienen der Rückmeldung von kurzen Informationen wie zum Beispiel Nachrichten über einen Lade-Status. Zur Erklärung von Dingen sind sie nicht angemessen, da sie nach einer bestimmten Zeit wieder verschwinden und nicht in der Richtung der Information beeinflussbar sind (Steuerbarkeit). <br/><br/>
                       <b>Erwartungskonformität:</b> Das mentale Modell entsteht durch die Erfahrung mit anderen Systemen. Dadurch entsteht eine Erwartungshaltung. Diese Erwartungshaltung wird mit dieser Art der Hilfe nicht erfüllt.<br/><br/>
                       </html>]]></string>
    <string name="answerQuizEditor01"><![CDATA[<html>
                       <b>Erwartungskonformität:</b> Nutzer würden erwarten, dass der rechte Button die Eckenanzahl erhöht. (Leserichtung links nach rechts/wenig nach viel) <br/><br/>
                       <b>Steuerbarkeit:</b> Sobald ein Button berührt wurde, wird der andere gesperrt.<br/><br/>
                       <b>Robustheit gegen Benutzerfehler:</b> Nach einem Fehler kann man sich nicht noch einmal umentscheiden.<br/><br/>
                       <b>Benutzerbindung:</b> Der Benutzer bekommt eine flapsige Nachricht auf sein Handeln.
                       </html>]]></string>
    <string name="answerQuizEditor02"><![CDATA[<html>
                       <b>Selbstbeschreibungsfähigkeit:</b> Die Icons für die Buttons sind nicht eindeutig genug gewählt und es gibt keine Bildunterschrift und keinen Tooltip.  <br/><br/>
                       </html>]]></string>
    <string name="answerQuizEditor03"><![CDATA[<html>
                       <b>Erwartungskonformität:</b> Der Zurücksetzen-Button ist grün (suggeriert: empfohlene Auswahl) und der Speichern-Button ist grau (suggeriert: deaktiviert). Man sollte bei der Farbauswahl mit Bedacht vorgehen. <br/><br/>
                       <b>Steuerbarkeit:</b> Der Weiter-Button führt wieder zur Farbauswahl und bietet nur ein Rondell zur Fortbewegung. Es sollte von jedem Untermenü möglich sein, zurück zu gehen oder direkt zum gewünschten Punkt zu springen.<br/><br/>
                       </html>]]></string>
    <string name="answerQuizEditor04"><![CDATA[<html>
                       <b>Steuerbarkeit / Aufgabenangemessenheit:</b> Es ist nicht möglich eine genaue Farbe auszuwählen. Man kann nur hoffen, dass die gewünschte Farbe nach x Versuchen erscheint. Ein zusätzliches Farbmenü wäre angebracht. <br/><br/>
                       </html>]]></string>
    <string name="volume">Lautstärke</string>
    <string name="music">Musik</string>
    <string name="coins">Coins</string>
    <string name="help">Hilfe</string>
    <string name="resolution">Auflösung</string>
    <string name="difficulty">Schwierigkeitsgrad</string>
    <string name="onOff">on/off</string>
    <string name="offOn">off/on</string>
    <string name="developers">Entwickelt von Hannes Richter, Jonas Feige, Michael Jesenko und Yasin Atasoy im Rahmen der Vorlesung \"Interaktive Systeme\" von \n Prof. Dr. Markus Dahm</string>
    <string name="appDescription">Lernen Sie die 7 Interaktionsprinzipien der DIN EN ISO 9241-110:2020 anhand praktischer Erfahrung in Form normverletzend gestalteter Dialoge und anschließendem Quiz kennen. Zur Anschauung dient das Spiel \"Vier gewinnt\" und dafür unnötige Spielvorbereitungen. Viel Spaß bei einer frustrierenden User Experience!</string>
    <string name="vierVerliert">Vier Verliert</string>
    <string name="start">Start</string>
    <string name="jobCorner">Lege die Anzahl der Ecken fest!</string>
</resources>