<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogInActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="96dp"
        android:layout_height="21dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/birthdate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameField" />

    <EditText
        android:id="@+id/userNameField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="32dp"
        android:autofillHints=""
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/userNameHint"
        android:inputType="none"
        android:textAlignment="textStart"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/birthdayMonthField"
        android:layout_width="57dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:autofillHints=""
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/monthOfBirth"
        android:inputType="none"
        android:text="@string/birthdayStartMonth"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/birthdayDayField"
        app:layout_constraintTop_toTopOf="@+id/birthdayDayField"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/birthdayDayField"
        android:layout_width="57dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:autofillHints=""
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/day_of_birth"
        android:inputType="none"
        android:text="@string/birthdayStartDay"
        android:textAlignment="center"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/emailFirstPart"
        android:layout_width="157dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/emailFirstPartHint"
        android:inputType="text"
        android:textAlignment="textStart"
        android:textColorHint="#757575"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:ignore="DuplicateSpeakableTextCheck,TextFields" />

    <EditText
        android:id="@+id/emailSecondPart"
        android:layout_width="74dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/emailDomainHint"
        android:inputType="text"
        android:textAlignment="textStart"
        android:textColorHint="#757575"
        android:textStyle="normal"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="@+id/emailFirstPart"
        tools:ignore="DuplicateSpeakableTextCheck,TextFields" />

    <EditText
        android:id="@+id/emailTopLevelDomain"
        android:layout_width="74dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:autofillHints=""
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/emailTopLevelDomainHint"
        android:inputType="none"
        android:textAlignment="textStart"
        android:textColorHint="#757575"
        android:textStyle="normal"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="@+id/emailSecondPart"
        tools:ignore="DuplicateSpeakableTextCheck,TextFields" />

    <EditText
        android:id="@+id/birthdayYearField"
        android:layout_width="57dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:autofillHints=""
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/yearOfBirth"
        android:inputType="none"
        android:text="@string/birthdayStartYear"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/birthdayMonthField"
        app:layout_constraintTop_toTopOf="@+id/birthdayMonthField" />

    <Button
        android:id="@+id/birthdayIncrementButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:text="@string/plusSign"
        app:layout_constraintStart_toEndOf="@+id/birthdayYearField"
        app:layout_constraintTop_toTopOf="@+id/birthdayYearField" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="96dp"
        android:layout_height="21dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/userName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/birthdayDayField" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="96dp"
        android:layout_height="21dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/eMail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userNameField" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="17dp"
        android:layout_height="27dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="20dp"
        android:text="@string/at"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/emailFirstPart"
        app:layout_constraintTop_toTopOf="@+id/emailFirstPart" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="5dp"
        android:layout_height="28dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="20dp"
        android:text="@string/emailPoint"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/emailSecondPart"
        app:layout_constraintTop_toTopOf="@+id/emailSecondPart" />

    <EditText
        android:id="@+id/nameField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="32dp"
        android:autofillHints=""
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/exampleMaxMustermann"
        android:inputType="none"
        android:textAlignment="textStart"
        android:textColorHint="#757575"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstLastNameField"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/firstLastNameField"
        android:layout_width="347dp"
        android:layout_height="24dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:autofillHints=""
        android:background="@null"
        android:ems="10"
        android:hint="@string/firstLastName"
        android:inputType="none"
        android:textAlignment="textStart"
        android:textColor="@color/material_dynamic_neutral50"
        android:textColorHint="@color/material_dynamic_neutral50"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="341dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:text="@string/textFirstCheckBox"
        android:textSize="8sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailFirstPart" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="341dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/textSecondCheckBox"
        android:textSize="8sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:text="@string/saveButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox2" />

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/CancelButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.99"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSave" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/copyrightHsd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/nextStepButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/nextStep"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/sose2022"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>