<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity">


    <Button
        android:id="@+id/four_connect_btn_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:text="@string/four_connect_btn_options" />

    <TextView
        android:id="@+id/tv_countdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/four_connect_general_margin"
        android:layout_marginTop="@dimen/four_connect_general_margin"
        android:layout_marginEnd="@dimen/four_connect_general_margin"
        android:layout_marginBottom="@dimen/four_connect_general_margin"
        android:drawableTop="@drawable/ic_timer"
        android:gravity="center"
        android:text="@string/four_connect_time_placeholder"
        android:textColor="#6200EE"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:ignore="UseCompatTextViewDrawableXml" />

    <Button
        android:id="@+id/four_connect_btn_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignEnd="@+id/tv_countdown"
        android:text="@string/four_connect_btn_help"

        />

    <include
        android:id="@+id/four_connect_layout_include"
        layout="@layout/activity_game_four_connect_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_countdown"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/tv_four_connect_result"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_centerInParent="true"
        android:background="#CCFFFFFF"
        android:backgroundTintMode="multiply"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:visibility="invisible" />

    <Button
        android:id="@+id/four_connect_btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/four_connect_btn_next"
        android:layout_below="@+id/four_connect_layout_include"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        android:layout_marginTop="@dimen/four_connect_general_margin"
        />
</RelativeLayout>