<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".EditorActivity">

    <include
        android:id="@+id/cvIncludeCorner"
        layout="@layout/coin_view_include"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.100000024" />

    <Button
        android:id="@+id/moreCornersBtn"
        android:layout_width="60dp"
        android:layout_height="70dp"
        android:text="@string/plusSign"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.367"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvIncludeCorner"
        app:layout_constraintVertical_bias="0.326" />

    <Button
        android:id="@+id/lessCornersBtn"
        android:layout_width="60dp"
        android:layout_height="70dp"
        android:text="@string/minusSign"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.623"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvIncludeCorner"
        app:layout_constraintVertical_bias="0.326" />

    <Button
        android:id="@+id/nextToDrawBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/nextBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvIncludeCorner"
        app:layout_constraintVertical_bias="0.845" />

    <TextView
        android:id="@+id/cornerCounterView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textColor="@color/purple_200"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/moreCornersBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvIncludeCorner" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jobCorner"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/nextToDrawBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lessCornersBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>

